--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.3",
     "nodemon": "^2.0.15"
   }
 }
