add JWT token and key

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=8000
 DATABASE_URL=mongodb+srv://taesic12:71XadjXe4oiYnDzt@cluster0.5k1dz.mongodb.net/facebook?retryWrites=true&w=majority
+TOKEN_SECRET=ym]DRu##I;ef|@@<}!i.T<hb}M/AC;6QF0&LPOzW`oe@<$&t`[JR{|S;.FfIR/|
